--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: candlesticks
+name: candlestix
 description: A high-performance full featured candlesticks chart for all platforms.
-version: 2.1.0
-homepage: https://github.com/r-mzy47/candlesticks
+version: 2.2.0
+homepage: https://github.com/robomotionio/candlesticks
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
